@@ -1,6 +1,6 @@
 ﻿// TortoiseMerge - a Diff/Patch program
 
-// Copyright (C) 2003-2011 - TortoiseSVN
+// Copyright (C) 2003-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -77,7 +77,6 @@ CBaseView::CBaseView()
     m_nDigits = 0;
     m_nMouseLine = -1;
     m_mouseInMargin = false;
-    m_bMouseWithin = FALSE;
     m_bIsHidden = FALSE;
     lineendings = EOL_AUTOLINE;
     m_bReadonly = true;
@@ -179,12 +178,12 @@ BEGIN_MESSAGE_MAP(CBaseView, CView)
     ON_COMMAND(ID_CARET_WORDRIGHT, &CBaseView::OnCaretWordright)
     ON_COMMAND(ID_EDIT_CUT, &CBaseView::OnEditCut)
     ON_COMMAND(ID_EDIT_PASTE, &CBaseView::OnEditPaste)
-    ON_WM_MOUSELEAVE()
     ON_WM_TIMER()
     ON_WM_LBUTTONDBLCLK()
     ON_COMMAND(ID_NAVIGATE_NEXTINLINEDIFF, &CBaseView::OnNavigateNextinlinediff)
     ON_COMMAND(ID_NAVIGATE_PREVINLINEDIFF, &CBaseView::OnNavigatePrevinlinediff)
     ON_COMMAND(ID_EDIT_SELECTALL, &CBaseView::OnEditSelectall)
+    ON_WM_LBUTTONUP()
 END_MESSAGE_MAP()
 
 
@@ -3068,27 +3067,20 @@ void CBaseView::OnMouseMove(UINT nFlags, CPoint point)
             ScrollAllSide(1);
             SetTimer(IDT_SCROLLTIMER, 20, NULL);
         }
+        SetCapture();
     }
 
-    if (!m_bMouseWithin)
-    {
-        m_bMouseWithin = TRUE;
-        TRACKMOUSEEVENT tme;
-        tme.cbSize = sizeof(TRACKMOUSEEVENT);
-        tme.dwFlags = TME_LEAVE;
-        tme.hwndTrack = m_hWnd;
-        _TrackMouseEvent(&tme);
-    }
 
     CView::OnMouseMove(nFlags, point);
 }
 
-void CBaseView::OnMouseLeave()
+void CBaseView::OnLButtonUp(UINT nFlags, CPoint point)
 {
     ShowDiffLines(-1);
-    m_bMouseWithin = FALSE;
+    ReleaseCapture();
     KillTimer(IDT_SCROLLTIMER);
-    CView::OnMouseLeave();
+
+    __super::OnLButtonUp(nFlags, point);
 }
 
 void CBaseView::OnTimer(UINT_PTR nIDEvent)
